--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ cycler==0.12.1
 datasets==2.15.0
 debugpy==1.8.0
 decorator==5.1.1
+deepdiff==7.0.1
 defusedxml==0.7.1
 deprecation==2.1.0
 dill==0.3.7
