--- a/requirements.txt
+++ b/requirements.txt
@@ -137,6 +137,7 @@ soupsieve==2.5
 stack-data==0.6.3
 StringDist==1.0.9
 sympy==1.12
+tabulate==0.9.0
 tensorboard-data-server==0.7.2
 tensorboard==2.15.1
 terminado==0.18.0
